# FiguresLabOOP

./: CMakeLists.txt  README
src/: array.cpp  figure.cpp  figure.h  hexagon.cpp  main.cpp  octagon.cpp  triangle.cpp
test/: test_figure.cpp
